[project]
name = "automation-exam-kabashov"
version = "0.1.0"
description = ""
authors = [
    {name = "kabashov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
